# machine_learning

./: .gitignore  Makefile  interp.py  mypy.ini  predi.py  pyproject.toml
agent_1/: README.md  agent_memo.py  demo.py  demo_classifier.___py  demo_model.___py  demo_nli.py  demo_training.py  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  run.py
agent_1/models/: classifier.py  classifier_model_base.py  classifier_model_tools.py  classifier_nli.py  classifier_nli_base.py  classifier_nli_interface.py  gen_model_base.py  general_llm.py  general_llm_base.___py  general_llm_base.py  llm_text_model.py
agent_1/tools/uv/: env  env.fish
agent_2/: .FROZEN_NOT_WORKING_BUT_FORMALLY_CORRCT_DO_NOT_TOUCH  README.md  agent.py  main.py
agent_3/: README.md  agent.py  check_env.py  example_prompts.txt  pyproject.toml  requirements.txt  run.py  tools.py
agent_3/agent/: agent.py  agent_openai.py  base.py  ollama_client.py  tools.py
agent_3/ui/: main.py
agent_4/: llama_cpp_server.sh  pyproject.toml
agent_4/agent/: agent_openai.py  agent_openai_tooling.py  tools.py  utils.py
agent_4/tests/unit/agent/: test_utils.py
agent_4/ui/: main.py
agent_5/: .env  README.md  devenv-python.sh  devenv-uv.sh  devenv.sh  llama_cpp_server.sh  makefile  pyproject.toml  run.py
agent_5/agent/: agent_openai.py  base.py
agent_5/ai_agent/: agent_openai.py  base.py  debug_middleware.py  fix_qwen_tools_middleware.py  tool_call_middleware.py  tools.py  types.py
agent_5/demo/: web_tool_demo.py
agent_5/lm-studio/: README.md  lms-add.sh  lms.sh
agent_5/tests/unit/agent/: test_tool_call_middleware.py
agent_5/ui/: main.py
agents_langgraph/: README.md  demo_training.py  dummy_agent.py  requirements.txt  run_training.py
agents_langgraph/source/: code_02_XX Basic ReAct Agent in LangGraph.ipynb
ai-agents/: .gitignore  README.md  agent_basic.py  agent_memo.py  agent_multi.py  agentt_joke.py  supercalc.py
autogen/: README.md  requirements.txt  start.sh  superminimo.py
autogen/.venvauto/: pyvenv.cfg
bpe/: bpe.py
docs/: original  roadmap.md
fastai_work/: 02_production.ipynb  base.py  images_downloader.py  images_model.py  is-it-a-bird-creating-a-model-from-your-own-data.ipynb  model_core.py  model_training.py  model_use.py  requirements.txt
huggingface/: .gitignore  README.md  requirements.txt  start.sh  tokenizer_01.py  tokenizer_02.py  training_01.py
learning/: bpe.py  cbow.py  skipgram.py  skipgram_model.model
linear_regression_engine/: github.md  linear_model_predictor.py  linear_regression_engine.py
llama_server/: .gitignore  Modelfile  README.md  ollama-create.sh  ollama-env.sh  ollama-generate.sh  ollama-run-mistral.sh  ollama-run.sh  ollama-shell.sh  ollama-start.sh
perceptron/: Makefile  README.md  requirements.txt
pytorch/: diff.py  requirements.txt  training.py
tests/: demo_test.py  linear_regression_engine_background_test.py  linear_regression_engine_test.py  linear_regression_engine_usage_test.py  polynomial_features_test.py
tokenization/: main.py  test_tokenize.py
(+31 files in other folders)
