[project]
name = "agent-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.59",
    "llama-cpp-python>=0.2.90",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
