[project]
dependencies = [
    "langchain==0.3.7",
    "langchain-core==0.3.23",
    "langchain-community==0.3.7",
    "langgraph==0.2.59",
    "llama-cpp-python==0.2.90",
    "python-dotenv>=1.0.1",
    "openai>=1.30.0"
]
description = "Agente 4"
name = "agent-4"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
  "black>=26.3.1",
  "pyright>=1.1.409",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
]
