[project]
dependencies = [
  "langchain==0.3.8",
  "langchain-core==0.3.25",
  "langchain-community==0.3.8",
  "langgraph==0.2.60",
  "llama-cpp-python==0.3.2",
  "llama-cpp-python[server]",
  "python-dotenv>=1.0.1",
  "openai>=1.35.0",
]
description = "Agente 4"
name = "agent-4"
readme = "README.md"
requires-python = ">=3.11,<3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "black>=26.3.1",
  "pyright>=1.1.410",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
]
