[project]
dependencies = [
  "langchain",
  "langchain-openai",
  "langchain-community",
  "llama-cpp-python[server]>=0.3.7",
]
description = "Agente 5"
name = "agent-5"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.1.0"

[dependency-groups]
dev = [
  "black>=26.3.1",
  "pyright>=1.1.410",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "ddgs==9.14.4"
]
